# cpupower-gui

./: .pre-commit-config.yaml  AUTHORS  COPYING  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac  cpupower-gui.spec  meson.build  meson_options.txt  org.gnome.CpupowerGui.json  org.rnd2.CpupowerGui.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-commit.yml
ArchLinux/: PKGBUILD  fix-dbus.patch
Fedora/: cpupower-gui.spec
build-aux/meson/: postinstall.py
cpupower_gui/: Makefile.am  __init__.py  __main__.py  __main__.py.in  config.py  cpupower-gui-helper.py.in  cpupower-gui.in  cpupower_gui.gresource.xml  helper.py  main.py  meson.build  tray.ui  utils.py  window.glade.in  window.py  window.ui.in
data/: Makefile.am  cpupower-gui-pkexec  cpupower-gui.desktop  cpupower-gui.desktop.in  cpupower.glade  cpupower_gui.conf  meson.build  org.rnd2.cpupower_gui.appdata.xml.in  org.rnd2.cpupower_gui.desktop.in.in  org.rnd2.cpupower_gui.gschema.xml  scaling-governors.conf
data/applications/: Makefile.am
data/cpupower_gui.d/: README  my_profile.profile.ex
data/dbus/: Makefile.am  org.rnd2.cpupower_gui.helper.conf  org.rnd2.cpupower_gui.helper.service  org.rnd2.cpupower_gui.helper.service.in
data/icons/: Makefile.am
data/man/: cpupower-gui.1  cpupower-gui.zh_CN.1
data/polkit/: Makefile.am  meson.build  org.rnd2.cpupower-gui.pkla  org.rnd2.cpupower-gui.policy  org.rnd2.cpupower-gui.rules  org.rnd2.pkexec.run-cpupower-gui.policy
data/services/: cpupower-gui-helper.service.in  cpupower-gui-user.service  cpupower-gui-user.service.in  cpupower-gui.service  cpupower-gui.service.in  meson.build  org.rnd2.cpupower_gui.helper.service.in  org.rnd2.cpupower_gui.service.in
data/systemd/: Makefile.am  cpupower-gui-helper.service
data/ui/: Makefile.am  cpupower.glade.in
po/: LINGUAS  Makevars  POTFILES  POTFILES.in  cpupower-gui.pot  de-po  el_GR.po  en.po  en_GB.po  hu.po  id.po  it.po  meson.build  nl.po  pt_BR.po  zh_CN.po
