#dbus-1
dbusdir = $(datadir)/dbus-1/system-services/
dbus_DATA = org.rnd2.cpupower_gui.helper.service

dbusconfdir = $(datadir)/dbus-1/system.d/
dbusconf_DATA = org.rnd2.cpupower_gui.helper.conf

EXTRA_DIST = org.rnd2.cpupower_gui.helper.service \
	     org.rnd2.cpupower_gui.helper.conf

-include $(top_srcdir)/git.mk
